# ddshow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  ddshow-log-debug.rar  graph.html  release.toml
.github/workflows/: release.yaml
crates/ddshow-sink/: CHANGELOG.md  Cargo.toml  release.toml
crates/ddshow-sink/src/: batch_logger.rs  lib.rs  writer.rs
crates/ddshow-types/: CHANGELOG.md  Cargo.toml
crates/ddshow-types/src/: differential_logging.rs  event.rs  ids.rs  lib.rs  operator_addr.rs  progress_logging.rs
crates/ddshow-types/src/timely_logging/: mod.rs  timely_event.rs
crates/timely-viz-hook/: Cargo.toml
crates/timely-viz-hook/src/: lib.rs
ddshow-dashboard/: .gitignore  .prettierrc  package.json  tsconfig.json
ddshow-dashboard/public/: index.html  manifest.json
ddshow-dashboard/src/: App.tsx  DDShowData.tsx  index.css
ddshow-dashboard/src/components/: DataLoader.tsx  Dataflows.css  Dataflows.tsx  Gantt.tsx  ProgramOverviewCards.tsx  WorkerOverview.tsx
ddshow-dashboard/vega/: operator-scatters.vg
proptest-regressions/dataflow/tests/: proptests.txt
src/: args.rs  colormap.rs  dot.rs  logging.rs  main.rs  network.rs  replay_loading.rs  report.rs  status.rs
src/dataflow/: channel_stats.rs  constants.rs  diff_list.rs  differential.rs  filter_map.rs  filter_split.rs  min_max.rs  mod.rs  operator_stats.rs  program_stats.rs  progress_stats.rs  reachability.rs  replay_with_shutdown.rs  send_recv.rs  shape.rs  split.rs  subgraphs.rs  summation.rs  tests.rs  timely_source.rs  types.rs  util.rs  utils.rs  worker.rs  worker_timeline.rs
src/dataflow/operators/: activate_capability_set.rs  antijoin.rs  delay.rs  diff_list.rs  epoch.rs  filter_map.rs  flat_split.rs  inspect.rs  iterate_ext.rs  keys.rs  map.rs  min_max.rs  mod.rs  negate.rs  reduce.rs  replay_with_shutdown.rs  rkyv_capture.rs  rkyv_event_reader.rs  sort.rs  timely_version_hack.rs  util.rs
src/dataflow/tests/: mod.rs  proptest_utils.rs  proptests.rs
src/dataflow/types/: mod.rs  operator_addr.rs
src/report/: mod.rs  tree.rs
src/ui/: echarts.min.js  graph.css  graph.html  graph.js  mod.rs
src/vega/: dashboard.html  mod.rs
tests/: ui.rs
tests/pass/: mod.rs  smoke.rs
