[package]
name = "ddshow"
description = "Timely and Differential dataflow log analysis and vizualization"
version = "0.1.1"
authors = ["Chase Wilson <me@chasewilson.dev>"]
license = "MIT OR Apache-2.0"
edition = "2018"
resolver = "2"
build = "build.rs"
repository = "https://github.com/Kixiron/ddshow"
keywords = ["timely", "differential", "dataflow", "tdiag"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools::debugging",
    "visualization",
]
default-run = "ddshow"

[workspace]
members = ["crates/*"]

[features]
default = []
timely-next = []

[dependencies]
anyhow = "1.0.38"
tracing = "0.1.25"
colorous = "1.0.3"
bytecheck = "0.6.1"
byteorder = "1.4.3"
structopt = "0.3.21"
num-traits = "0.2.14"
serde_json = "1.0.64"
abomonation = "0.7.3"
comfy-table = "4.0.0"
ordered-float = "2.5.1"
crossbeam-channel = "0.5.0"
abomonation_derive = "0.5.0"
strum = { version = "0.21.0", features = ["derive"] }
serde = { version = "1.0.123", features = ["derive"] }
tinyvec = { version = "1.2.0", features = ["alloc", "serde"] }
indicatif = { version = "0.16.2", features = ["improved_unicode"] }

timely = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-4" }
differential-dataflow = { git = "https://github.com/ddlog-dev/differential-dataflow", branch = "ddlog-4", default-features = false }
# timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
# differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }

    [dependencies.tera]
    version = "1.6.1"
    default-features = false

    [dependencies.tracing-subscriber]
    version = "0.2.16"
    default-features = false
    features = ["env-filter", "fmt", "ansi"]

    [dependencies.ddshow-sink]
    version = "0.2.2"
    path = "crates/ddshow-sink"
    features = ["ddflow", "tracing"]

    [dependencies.ddshow-types]
    version = "0.1.1"
    path = "crates/ddshow-types"
    features = ["rkyv", "serde", "enable_abomonation"]

    [dependencies.rkyv]
    version = "0.7.2"
    # TODO: "strict" and "copy" once that's stable
    features = ["validation", "tinyvec", "tinyvec_alloc"]

[dev-dependencies]
rand = "0.8.0"
proptest = "1.0.0"
libtest-mimic = "0.3.0"

[build-dependencies.vergen]
version = "5.1.6"
default-features = false
features = ["build", "cargo", "rustc"]

[profile.dev]
debug = 0
lto = false
opt-level = 0

[profile.release]
debug = 2
lto = "thin"
opt-level = 3
codegen-units = 24
debug-assertions = false

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false
