[package]
name = "ddshow"
description = "Timely and Differential dataflow log analysis and vizualization"
version = "0.2.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
license = "MIT OR Apache-2.0"
edition = "2018"
resolver = "2"
build = "build.rs"
repository = "https://github.com/Kixiron/ddshow"
keywords = ["timely", "differential", "dataflow", "tdiag"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools::debugging",
    "visualization",
]
default-run = "ddshow"

[workspace]
members = ["crates/*"]

[features]
default = []
timely-next = []

[dependencies]
atty = "0.2.14"
ctrlc = "3.1.9"
anyhow = "1.0.38"
colorous = "1.0.5"
bytecheck = "0.6.3"
byteorder = "1.4.3"
structopt = "0.3.22"
num-traits = "0.2.14"
serde_json = "1.0.65"
abomonation = "0.7.3"
comfy-table = "4.0.1"
ordered-float = "2.7.0"
crossbeam-deque = "0.8.0"
crossbeam-channel = "0.5.0"
abomonation_derive = "0.5.0"
strum = { version = "0.21.0", features = ["derive"] }
serde = { version = "1.0.126", features = ["derive"] }
tinyvec = { version = "1.3.1", features = ["alloc", "serde"] }

timely = "0.12.0"
differential-dataflow = { version = "0.12.0", default-features = false }
# timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
# differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }

    [dependencies.mimalloc]
    version = "0.1.26"
    default-features = false

    [dependencies.crossterm]
    version = "0.20.0"

    [dependencies.tracing]
    version = "0.1.26"
    features = ["release_max_level_info"]

    [dependencies.xxhash-rust]
    version = "0.8.2"
    features = ["xxh3"]
    default-features = false

    [dependencies.tera]
    version = "1.12.1"
    default-features = false

    [dependencies.tracing-subscriber]
    version = "0.2.19"
    features = ["env-filter", "fmt", "ansi"]
    default-features = false

    [dependencies.ddshow-sink]
    version = "^0.2.0"
    path = "crates/ddshow-sink"
    features = ["ddflow", "tracing"]

    [dependencies.ddshow-types]
    version = "^0.2.0"
    path = "crates/ddshow-types"
    features = ["rkyv", "serde", "enable_abomonation"]

    [dependencies.rkyv]
    version = "0.7.3"
    # TODO: "strict" and "copy" once that's stable
    features = ["validation", "tinyvec", "tinyvec_alloc"]

[dev-dependencies]
rand = "0.8.4"
proptest = "1.0.0"
libtest-mimic = "0.3.0"

[build-dependencies.vergen]
version = "5.1.13"
features = ["build", "cargo", "rustc"]
default-features = false

[profile.dev]
debug = 0
lto = false
opt-level = 0

[profile.release]
debug = 0
lto = "thin"
opt-level = 3
codegen-units = 1
debug-assertions = false

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false
