[package]
name = "ddshow-types"
description = "FFI-safe types for ddshow"
version = "0.2.1"
authors = ["Chase Wilson <me@chasewilson.dev>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/Kixiron/ddshow"
keywords = ["timely", "differential", "dataflow", "ddshow"]
categories = ["development-tools::debugging"]

[features]
default = ["rkyv", "ddflow"]
rkyv = ["rkyv_dep", "bytecheck"]
serde = ["serde_dep", "tinyvec/serde"]
enable_abomonation = ["abomonation", "abomonation_derive"]
ddflow = ["differential-dataflow"]

[dependencies]
cfg-if = "1.0.0"
tinyvec = { version = "1.3.1", features = ["alloc", "serde"] }
abomonation = { version = "0.7.3", optional = true }
abomonation_derive = { version = "0.5.0", optional = true }
bytecheck = { version = "0.6.2", optional = true }
timely = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-4", default-features = false }
differential-dataflow = { git = "https://github.com/ddlog-dev/differential-dataflow", branch = "ddlog-4", default-features = false, optional = true }

    [dependencies.rkyv_dep]
    package = "rkyv"
    version = "=0.7.3"
    # TODO: "strict"
    features = ["validation", "tinyvec", "tinyvec_alloc"]
    optional = true

    [dependencies.serde_dep]
    package = "serde"
    version = "1.0.123"
    features = ["derive"]
    optional = true

    # TODO: Allow random generation of types under feature flags
    #       to allow for fuzzing
