[package]
name = "timely-viz-hook"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
# bincode = "1.3.1"
# tracing = "0.1.22"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"

[dependencies.timely]
path = "../../vendor/timely-dataflow/timely"
default-features = false
